# ndk-app-minimal

./: .gitlab-ci.yml  CHANGELOG.md  README.md  env.sh
.github/workflows/: doc.yml
app/top/: Modules.tcl  app_subcore.vhd  application_core.vhd  barrel_proc_debug_core.vhd  floorplan_with_pci.py  usr_constr.xdc
apps/: DevTree.tcl  Modules.tcl  README.md  application_core_ent.vhd
apps/manycore/: DevTree.tcl  Modules.tcl  application_core_full_arch.vhd  barrel_proc_debug_core.vhd  pblock_constr.xdc
apps/minimal/tests/cocotb/: cocotb_grpc.py  cocotb_test.py  prepare.sh  pyproject.toml  readme.rst  top-level-sim.jenkinsfile
apps/testing/: Modules.tcl  application_core_empty_arch.vhd  application_core_test_arch.vhd
cards/: card.mk
config/: Vivado.inc.tcl  bootstrap.tcl  core_conf.tcl  core_param_check.tcl  custom_func.tcl
core/: DevTree.tcl  Modules.tcl  core.mk  core_const_pkg.vhd  fpga_common.vhd  mi_addr_space_pkg.vhd
python/cocotbext/: pyproject.toml  setup.py
python/cocotbext/cocotbext/nfb/ext/grpc/: __init__.py  dma.py  nfb.py  server.py
python/cocotbext/cocotbext/ofm/base/: generators.py  proxymonitor.py
python/cocotbext/cocotbext/ofm/mfb/: monitors.py
python/cocotbext/cocotbext/ofm/mi/: drivers.py  monitors.py  proxymonitor.py  transaction.py
python/cocotbext/cocotbext/ofm/mvb/: drivers.py  monitors.py  transaction.py
python/cocotbext/cocotbext/ofm/utils/: math.py  signals.py  throughput_probe.py
python/cocotbext/cocotbext/ofm/ver/: generators.py
sw/: README.md  gls_mod.py  pkt_receive.c  pkt_transmit.c  program_fpga.tcl
(+370 files in other folders)
